dark mode by default, fix initial white flicker

--- a/dark.css
+++ b/dark.css
@@ -1,57 +1,73 @@
 /* dark.css */
-body, input, select, textarea {
+
+html.dark body,
+html.dark input,
+html.dark select,
+html.dark textarea {
   background-color: #1e1e1e !important;
   color: #e0e0e0 !important;
 }
 
-a {
+html.dark a {
   color: #e0e0e0 !important;
 }
 
-a:hover, a:focus, a:active {
+html.dark a:hover,
+html.dark a:focus,
+html.dark a:active {
   color: #888888 !important;
 }
 
-header, footer, article, .container, #main-navigation {
+html.dark article .title {
+  color: #e0e0e0 !important;
+}
+
+html.dark header,
+html.dark footer,
+html.dark article,
+html.dark .container,
+html.dark #main-navigation {
   background-color: #1e1e1e !important;
 }
 
-.the-content a {
+html.dark .the-content a {
   color: #888888 !important;
 }
 
-.the-content a:hover {
-   color: #AAAAAA !important;
+html.dark .the-content a:hover {
+  color: #aaaaaa !important;
 }
 
-article .the-content p,
-.commentlist .comment,
-.commentlist .pingback,
-.comment-meta,
-#respond form label,
-#main-navigation ul li a {
+html.dark article .the-content p,
+html.dark .commentlist .comment,
+html.dark .commentlist .pingback,
+html.dark .comment-meta,
+html.dark #respond form label,
+html.dark #main-navigation ul li a {
   color: #cfcfcf !important;
 }
 
-input, textarea {
+html.dark input,
+html.dark textarea {
   background-color: #2c2c2c !important;
   border-color: #444 !important;
   color: #eee !important;
 }
 
-pre, code {
+html.dark pre,
+html.dark code {
   background: #2d2d2d !important;
   color: #e0e0e0 !important;
 }
 
-.commentlist .pingback,
-.bypostauthor {
+html.dark .commentlist .pingback,
+html.dark .bypostauthor {
   background-color: #2c2c2c !important;
 }
 
-body.dark input[type="submit"],
-body.dark input[type="submit"]:hover,
-body.dark input[type="submit"]:focus {
+html.dark input[type="submit"],
+html.dark input[type="submit"]:hover,
+html.dark input[type="submit"]:focus {
   background: #333 !important;
   color: #f0f0f0 !important;
   border: 1px solid #666 !important;
@@ -61,3 +77,9 @@ body.dark input[type="submit"]:focus {
   -moz-box-shadow: none !important;
 }
 
+/* Flicker fix for Flickr Justified Gallery */
+html.dark .flickr-justified-gallery-wrapper,
+html.dark .justified-gallery {
+  background: none !important;
+  background-color: transparent !important;
+}
